# EarlyLiverFailurePrediction

./: .gitignore  DeepHepaStrat_DataPrep.ipynb  HepSense_Vision.py  README.md  app.py  calc_meld_auroc.py  clinical_pipeline.py  evaluate_thresholds.py  hepsense_clinical_xgboost_v1.joblib  hepsense_temporal_xgboost_v1.joblib  inspect_data.py  le_production.pkl  model_features.pkl  model_medians.pkl  plot_vision_training.py  pyproject.toml  requirements.txt  selected_features.pkl  streamlit_app.py  test_api.py  tmeld_model.pkl  tmeld_production.pkl  train.py  validate_ilpd.py
backend/: api.py  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
