[project]
name = "earlyliverfailureprediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grad-cam>=1.5.5",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "keras>=3.14.0",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "optuna>=4.8.0",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "shap>=0.52.0",
    "streamlit>=1.58.0",
    "tensorflow>=2.21.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tsfresh>=0.21.1",
    "xgboost>=3.2.0",
]
